# ersilia-apptainer

./: README.md  pyproject.toml
src/ersilia_apptainer/: cli.py  creator.py  logger.py  runner.py
tests/: test_core.py
