[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ersilia_apptainer"
version = "0.1.0"
description = "A command-line interface for converting and executing Ersilia containerized models on HPC systems using Apptainer."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Marina Miñarro-Lleonar", email="marina@ersilia.io"},
  {name="Miquel Duran-Frigola", email="miquel@ersilia.io"}
]
requires-python = ">=3.9"

dependencies = [
  "rich",
  "loguru"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]

[project.scripts]
ersilia_apptainer = "ersilia_apptainer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

